css/gidungjido.css
@import url(libraries/reset.css);

@import url(libraries/overlay.css);


@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);







canvas {

	width: 100%;
	height: 100%;

	display: block;


}






body {

	font-size: 16px;

	line-height: 2em;


	font-family: "Courier New", Monospace;
	font-weight: 100;


	text-align: center;


	color: #FFF;

}




:lang(ko){

	font-family: "Courier New", Monospace, "Noto Sans KR", "Noto Sans TC";
	font-weight: 100;

}







/*

button {

	padding: 0;
	margin: 0;

	padding-left: 3px;
	padding-right: 3px;


	font-size: 16px;


	text-align: center;


	font-family: "Courier New", Monospace;
	font-weight: 100;

	color: #FFF;


	background: none;


	border: 1px;
	border-color: #FFF;
	border-style: solid;

	border-radius: 3px;

}

*/







span.underline {

	text-decoration: underline;

}





span.roundedborder {

	padding-left: 3px;
	padding-right: 3px;


	border: 1px;
	border-color: #FFF;
	border-style: solid;

	border-radius: 3px;

}







.crt {

	background: transparent url("../assets/crt.png") !important;

}







ruby rp {

	display: none;

}





p {
	
	padding: 0 1em 1em 1em;

}







#menu {

	width: 100%;
	height: 100%;
	
	background-color: rgba(68, 68, 68, 0.4);

}






.loading {

	margin-top: 64px; /* fallback */
	margin-top: 33vh;

	text-align: center;
}


.loadingbar {

	padding: 0;
	margin: 0;


	display: inline-block;
	
	text-align: left;



	background: #FFF;


	width: 0px;
	height: 1px;

}







#countryinfo {

	display: inline-block;


	position: absolute;



	padding: 1em;



	background-color: rgba(68, 68, 68, 0.4);


	font-size: 12px;

	line-height: 1.4em;



	border-radius: 3px;

}







h1 {

	padding: 1em;

	margin-top: 1em;

	
	line-height: 1em;

	font-size: 64px;

}





h2 {
	padding: 1em;
	
	
	line-height: 1em;

	font-size: 24px;

}





h3 {

	font-size: 16px;

	line-height: 2em;


	padding: 0 1em;

}

